# cute-alden

./: .SRCINFO  CHANGELOG  LICENSE  PKGBUILD  README.md
cute-alden-0.2/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  alden.c  config.h.in  configure  configure.ac  cute-alden.1.in
ubuntu/: README.md  build-deb.sh
